✨ Actualizar branding del proyecto
- Cambiar título de 'My Trae Project' a 'Sistema Zarpar'
- Crear favicon elegante con letra Z en gradiente azul
- Actualizar metadatos del HTML (descripción, idioma español)
- Agregar theme-color para navegadores móviles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Trae Project</title>
+    <meta name="description" content="Sistema de gestión integral para repuestos de celulares - Zarpar" />
+    <meta name="author" content="Sistema Zarpar" />
+    <meta name="theme-color" content="#3b82f6" />
+    <title>Sistema Zarpar</title>
     <script type="module">
       if (import.meta.hot?.on) {
         import.meta.hot.on('vite:error', (error) => {
